--- a/partials/addmaterial.html
+++ b/partials/addmaterial.html
@@ -84,8 +84,8 @@
                           
                           <div id="tabsDemo4Content" class="tab-content tab-content-v3">
                                       <div role="tabpanel" class="tab-pane fade active in" id="tabs-demo4-area1" aria-labelledby="tabs-demo4-area1" style="margin-bottom:13px">                                                            
-                                              <textarea ng-model="material.content" class="box-v7-commenttextbox" rows="10" placeholder="write material content ..." style="display:block; width:100%; border-color:#CCCCCC; padding:5px"></textarea>
-                                              <button class="btn ripple-infinite  btn-warning right top-20" ng-click="creatematerial(material)" style="width:90px">
+                                              <textarea id="mcontent" data-ng-model="material.content" class="box-v7-commenttextbox" rows="10" placeholder="write material content ..." style="display:block; width:100%; border-color:#CCCCCC; padding:5px"></textarea>
+                                              <button class="btn ripple-infinite  btn-warning right top-20" onclick="if (event.keyCode == 13) document.getElementById('mcontent').val().replaceAll('/\n/g','<br/>')" ng-click="creatematerial(material)" style="width:90px">
                                                 <div>
                                                   <span>Save</span>
                                                 </div>
