--- a/partials/wordbook_detail.html
+++ b/partials/wordbook_detail.html
@@ -52,6 +52,9 @@
                                             <input type="text" ng-model="newwordbook.title" class="modal-content-right-text-mail" style="border:none; width:200%" placeholder="{{wordbook_detail.title}}">
                                         </a>       
                                       </li>
+                                        <label style="float:right; padding-top:20px; color:#009688">
+                                          {{wordbook_detail.numWords}}
+                                        </label>
                                     </ul>
                                     <div id="tabsDemo4Content" class="tab-content tab-content-v3">
                                       <div role="tabpanel" class="tab-pane fade active in" id="tabs-demo4-area1" aria-labelledby="tabs-demo4-area1" style="margin-bottom:13px">
