--- a/partials/materialdetail.html
+++ b/partials/materialdetail.html
@@ -43,7 +43,7 @@
                             <p style="font-weight:100">By <a>{{m_detail.material.creator}}</a></p>
                         </div>
                         <div class="panel-body text-left" style="margin-top:0; padding-top:0">
-                            <pre style="padding-bottom:0">
+                            <pre style="padding-bottom:0; padding-left:25px">
                                 <code ng-click="hoverIn()" word-under-id="model.id" word-under-cursor="model.word" word-under-cursor-content="m_detail.material.content" ng-bind-html="m_detail.material.content" style="margin-left:-130px; font-family: 'Roboto', sans-serif; font-weight:300; font-size:15px">
                                 </code>
                             </pre>
