--- a/partials/addmaterial.html
+++ b/partials/addmaterial.html
@@ -21,6 +21,37 @@
           color: #918F99;
           cursor: pointer;
         }
+        /* Hide the file input using
+        opacity */
+        [type=file] {
+            position: absolute;
+            filter: alpha(opacity=0);
+            opacity: 0;
+        }
+        input,
+        [type=file] + label {
+          border: 1px solid #CCC;
+          border-radius: 3px;
+          text-align: left;
+          padding: 10px;
+          width: 150px;
+          margin: 0;
+          left: 0;
+          position: relative;
+        }
+        [type=file] + label {
+          text-align: center;
+          /*left: 7.35em;*/
+          /*top: -1em;*/
+          /* Decorative */
+          background: transparent;
+          color: #918C8C;
+          border: none;
+          cursor: pointer;
+        }
+        [type=file] + label:hover {
+          background: transparent;
+        }
      </style>
       <div class="container-fluid mimin-wrapper">
           <!-- start: Content -->
@@ -47,7 +78,7 @@
                   <div class="panel-body">
                       <div class="col-md-12 padding-0">
                         <div class="col-md-12 col-sm-12 padding-0 mail-right" style="padding-top:0">
-                          <div class="col-md-12 mail-right-tool" style="padding-top:0">
+                          <div class="col-md-12 mail-right-tool" style="padding-top:0; padding-bottom:7px">
                             <!--<ul id="tabs-demo4" class="nav">
                                 <li><input type="text" class="txtinput border box-shadow-none" placeholder="Material title" style="background:transparent; margin-left:-10px; width:200%;"/></li>
                             </ul>-->
@@ -83,13 +114,22 @@
                           </div>-->
                           
                           <div id="tabsDemo4Content" class="tab-content tab-content-v3">
-                                      <div role="tabpanel" class="tab-pane fade active in" id="tabs-demo4-area1" aria-labelledby="tabs-demo4-area1" style="margin-bottom:13px">                                                            
-                                              <textarea id="mcontent" data-ng-model="material.content" class="box-v7-commenttextbox" rows="10" placeholder="write material content ..." style="display:block; width:100%; border-color:#CCCCCC; padding:5px"></textarea>
+                                      <div role="tabpanel" class="tab-pane fade active in" id="tabs-demo4-area1" aria-labelledby="tabs-demo4-area1" style="margin-bottom:13px">    
+                                            <label style="margin-right:10px">Please choose file image: </label>
+                                            <input id="f01" name="mimage" file-model="myFile" type="file" placeholder="" accept="image/*"/>
+                                            <label for="f01" style="border:1px solid #918C8C; padding:1px; width:auto; padding-right:5px; padding-left:5px;">choose image ...</label><br/><br/>
+
+                                            <label style="margin-right:10px">Please choose file sound: </label>
+                                            <input id="f02" type="file" placeholder="" accept="audio/*"/>
+                                            <label for="f02" style="border:1px solid #918C8C; padding:1px; width:auto; padding-right:5px; padding-left:5px;">choose sound ...</label>
+
+                                              <textarea id="mcontent" data-ng-model="material.content" class="box-v7-commenttextbox" rows="10" placeholder="write material content ..." style="display:block; width:100%; border-color:#CCCCCC; padding:5px; margin-top:15px"></textarea>
                                               <button class="btn ripple-infinite  btn-warning right top-20" onclick="if (event.keyCode == 13) document.getElementById('mcontent').val().replaceAll('/\n/g','<br/>')" ng-click="creatematerial(material)" style="width:90px">
                                                 <div>
                                                   <span>Save</span>
                                                 </div>
-                                              </button>                                                               
+                                              </button>  
+                                              <button ng-click="uploadFile()">upload me</button>                                                             
                                       </div>                                                              
                                     </div>
 
@@ -104,7 +144,18 @@
   </div>
     <!-- custom -->
      <script type="text/javascript">
-     
+
+     $("[type=file]").on("change", function(){
+      // Name of file and placeholder
+      var file = this.files[0].name;
+      var dflt = $(this).attr("placeholder");
+      if($(this).val()!=""){
+        $(this).next().text(file);
+      } else {
+        $(this).next().text(dflt);
+      }
+    });
+
      function reload(){
           $("html, body").animate({
               scrollTop: 0
